src/objects/vlocity_ins__AssetInsuredItem__c.object
<CustomObject>
    <description>Represents an item covered under an insurance policy such as a home, auto or other vehicle, property including structures and contents, jewelry or other valuable item. Describes the details of the item covered under the insurance policy. These details drive calculation of market value and replacement cost at the time of a claim. Master-detail child object of Policy (Asset).</description>
    <fields>
        <fullName>vlocity_ins__Address1__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Address2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeSelectedValues__c</fullName>
        <label>Attribute Selected Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FeeAmount__c</fullName>
        <description>Calculated fee on the insured item.</description>
        <label>Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ImageId__c</fullName>
        <formula>vlocity_ins__Product2Id__r.vlocity_ins__ImageId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image &amp; Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Image__c</fullName>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InsurableItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insurable Item</label>
        <referenceTo>vlocity_ins__InsurableItem__c</referenceTo>
        <relationshipLabel>Insured Items</relationshipLabel>
        <relationshipName>InsuredItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InsuredItemNumber__c</fullName>
        <label>Insured Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Make__c</fullName>
        <label>Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MarketValue__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ModelYear__c</fullName>
        <label>Model Year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Model__c</fullName>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentAssetInsuredItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Insured Item</label>
        <referenceTo>vlocity_ins__AssetInsuredItem__c</referenceTo>
        <relationshipLabel>Parent Insured Items</relationshipLabel>
        <relationshipName>ParentInsuredItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyAssetId__c</fullName>
        <label>Policy</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Insured Items</relationshipLabel>
        <relationshipName>InsuredItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PremiumAmount__c</fullName>
        <label>Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricingSource__c</fullName>
        <formula>vlocity_ins__Product2Id__r.vlocity_ins__PricingSource__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Source Mapping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryInsuredPartyRelationshipId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Held Product Relationship</label>
        <referenceTo>vlocity_ins__AssetPartyRelationship__c</referenceTo>
        <relationshipLabel>Primary Insured Items</relationshipLabel>
        <relationshipName>PrimaryInsuredItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProRatedPremiumAmount__c</fullName>
        <description>Prorated amount of premium base on the remaining days of the modified Insured Item</description>
        <label>Prorated Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the specific insurance product that provides coverage for this insured item.</description>
        <label>Insured Item Spec</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Insured Items</relationshipLabel>
        <relationshipName>InsuredItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductChildItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Policy Insured Item Spec</label>
        <referenceTo>vlocity_ins__ProductChildItem__c</referenceTo>
        <relationshipLabel>Insured Items</relationshipLabel>
        <relationshipName>InsuredItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProratedFeeAmount__c</fullName>
        <description>Prorated amount of fee based on the remaining days of the modified insured item.</description>
        <label>Prorated Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProratedTaxAmount__c</fullName>
        <description>Prorated amount of tax based on the remaining days of the modified insured item.</description>
        <label>Prorated Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RatingClassification__c</fullName>
        <label>Rating Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RecordTypeName__c</fullName>
        <formula>vlocity_ins__Product2Id__r.vlocity_ins__RecordTypeName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Style__c</fullName>
        <label>Style</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cargo Truck</fullName>
                </value>
                <value>
                    <fullName>Convertible</fullName>
                </value>
                <value>
                    <fullName>Farm Equipment</fullName>
                </value>
                <value>
                    <fullName>Hatchback</fullName>
                </value>
                <value>
                    <fullName>Light Truck</fullName>
                </value>
                <value>
                    <fullName>Minivan</fullName>
                </value>
                <value>
                    <fullName>Motorcycle</fullName>
                </value>
                <value>
                    <fullName>RV</fullName>
                </value>
                <value>
                    <fullName>Sedan</fullName>
                </value>
                <value>
                    <fullName>Semi Tractor</fullName>
                </value>
                <value>
                    <fullName>Semi-Trailer</fullName>
                </value>
                <value>
                    <fullName>SUV</fullName>
                </value>
                <value>
                    <fullName>Trailer</fullName>
                </value>
                <value>
                    <fullName>Van</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Bass Boat</fullName>
                </value>
                <value>
                    <fullName>Jet Ski / Water Scooter</fullName>
                </value>
                <value>
                    <fullName>Runabout</fullName>
                </value>
                <value>
                    <fullName>Sailboat</fullName>
                </value>
                <value>
                    <fullName>Cabin Cruiser</fullName>
                </value>
                <value>
                    <fullName>Pontoon Boat</fullName>
                </value>
                <value>
                    <fullName>Yacht</fullName>
                </value>
                <value>
                    <fullName>Airboat</fullName>
                </value>
                <value>
                    <fullName>Canoe</fullName>
                </value>
                <value>
                    <fullName>Catamaran</fullName>
                </value>
                <value>
                    <fullName>Jet Boat</fullName>
                </value>
                <value>
                    <fullName>Kayak</fullName>
                </value>
                <value>
                    <fullName>Trawler</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__TaxAmount__c</fullName>
        <description>Calculated tax on the insured item.</description>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalAmount__c</fullName>
        <description>Total taxes, fees, and price for the insured item.</description>
        <formula>vlocity_ins__TaxAmount__c + vlocity_ins__FeeAmount__c + vlocity_ins__PremiumAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalProratedAmount__c</fullName>
        <description>Total prorated taxes, fees, and price for the insured item.</description>
        <formula>vlocity_ins__ProratedTaxAmount__c + vlocity_ins__ProratedFeeAmount__c + vlocity_ins__ProRatedPremiumAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Prorated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalSumInsured__c</fullName>
        <label>Total Sum Insured</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Antique/Classic Vehicle</fullName>
                </value>
                <value>
                    <fullName>Apartment</fullName>
                </value>
                <value>
                    <fullName>Barley</fullName>
                </value>
                <value>
                    <fullName>Beans</fullName>
                </value>
                <value>
                    <fullName>Business - Leased</fullName>
                </value>
                <value>
                    <fullName>Business - Owned</fullName>
                </value>
                <value>
                    <fullName>Cat</fullName>
                </value>
                <value>
                    <fullName>Chicken</fullName>
                </value>
                <value>
                    <fullName>Commercial - Garage</fullName>
                </value>
                <value>
                    <fullName>Commercial - Office</fullName>
                </value>
                <value>
                    <fullName>Commercial - Storefront</fullName>
                </value>
                <value>
                    <fullName>Commercial Vehicle</fullName>
                </value>
                <value>
                    <fullName>Commercial - Warehouse</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Condominium</fullName>
                </value>
                <value>
                    <fullName>Corn</fullName>
                </value>
                <value>
                    <fullName>Dog</fullName>
                </value>
                <value>
                    <fullName>Donkey</fullName>
                </value>
                <value>
                    <fullName>Driver</fullName>
                </value>
                <value>
                    <fullName>Duck</fullName>
                </value>
                <value>
                    <fullName>Ewes</fullName>
                </value>
                <value>
                    <fullName>Farm Vehicle</fullName>
                </value>
                <value>
                    <fullName>Fishing Boat</fullName>
                </value>
                <value>
                    <fullName>Fruit</fullName>
                </value>
                <value>
                    <fullName>Goat</fullName>
                </value>
                <value>
                    <fullName>Goose</fullName>
                </value>
                <value>
                    <fullName>Grain</fullName>
                </value>
                <value>
                    <fullName>Guinea</fullName>
                </value>
                <value>
                    <fullName>Hay</fullName>
                </value>
                <value>
                    <fullName>Hen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Use__c</fullName>
        <label>Use</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Dwelling</fullName>
                </value>
                <value>
                    <fullName>Second Home</fullName>
                </value>
                <value>
                    <fullName>Recreational Use</fullName>
                </value>
                <value>
                    <fullName>Investment Property</fullName>
                </value>
                <value>
                    <fullName>Business - Owned</fullName>
                </value>
                <value>
                    <fullName>Business - Leased</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Pleasure</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Mixed Use</fullName>
                </value>
                <value>
                    <fullName>Farming</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__VIN__c</fullName>
        <description>For vehicles, the vehicle identification number (VIN) of the specific vehicle covered on this policy.</description>
        <label>VIN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__YearBuilt__c</fullName>
        <label>Year Built/Manufactured</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Insured Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insured Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>